feat: add account-settings page (change password), add preferences page (change font and theme)

--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -4,11 +4,10 @@
 
 /* Base CSS Custom Properties */
 :root {
-	--radius: 0.5rem;
+
 }
 
-.keyboard-fixed-font,
-.keyboard-fixed-font * {
+.keyboard-fixed-font {
 	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif !important;
 }
 
