--- a/client/src/styles/fonts.css
+++ b/client/src/styles/fonts.css
@@ -1,71 +1,71 @@
-[data-font="geist"] * {
-	font-family: var(--font-geist), system-ui, sans-serif;
+[data-font="geist"] {
+	font-family: var(--font-geist), system-ui, sans-serif !important;
 }
 
-[data-font="inter"] * {
-	font-family: var(--font-inter), system-ui, sans-serif;
+[data-font="inter"] {
+	font-family: var(--font-inter), system-ui, sans-serif !important;
 }
 
-[data-font="roboto"] * {
-	font-family: var(--font-roboto), system-ui, sans-serif;
+[data-font="roboto"] {
+	font-family: var(--font-roboto), system-ui, sans-serif !important;
 }
 
-[data-font="poppins"] * {
-	font-family: var(--font-poppins), system-ui, sans-serif;
+[data-font="poppins"] {
+	font-family: var(--font-poppins), system-ui, sans-serif !important;
 }
 
-[data-font="openSans"] * {
-	font-family: var(--font-openSans), system-ui, sans-serif;
+[data-font="openSans"] {
+	font-family: var(--font-openSans), system-ui, sans-serif !important;
 }
 
-[data-font="sourceCodePro"] * {
-	font-family: var(--font-sourceCodePro), "Courier New", monospace;
+[data-font="sourceCodePro"] {
+	font-family: var(--font-sourceCodePro), "Courier New", monospace !important;
 }
 
-[data-font="comfortaa"] * {
-	font-family: var(--font-comfortaa), cursive, sans-serif;
+[data-font="comfortaa"] {
+	font-family: var(--font-comfortaa), cursive, sans-serif !important;
 }
 
-[data-font="patrickHand"] * {
-	font-family: var(--font-patrickHand), cursive, sans-serif;
+[data-font="patrickHand"] {
+	font-family: var(--font-patrickHand), cursive, sans-serif !important;
 }
 
-[data-font="spaceMono"] * {
-	font-family: var(--font-spaceMono), monospace;
+[data-font="spaceMono"] {
+	font-family: var(--font-spaceMono), monospace !important;
 }
 
-[data-font="paytoneOne"] * {
-	font-family: var(--font-paytoneOne), cursive, sans-serif;
+[data-font="paytoneOne"] {
+	font-family: var(--font-paytoneOne), cursive, sans-serif !important;
 }
 
-[data-font="righteous"] * {
-	font-family: var(--font-righteous), cursive, sans-serif;
+[data-font="righteous"] {
+	font-family: var(--font-righteous), cursive, sans-serif !important;
 }
 
-[data-font="lato"] * {
-	font-family: var(--font-lato), system-ui, sans-serif;
+[data-font="lato"] {
+	font-family: var(--font-lato), system-ui, sans-serif !important;
 }
 
-[data-font="merriweather"] * {
-	font-family: var(--font-merriweather), serif;
+[data-font="merriweather"] {
+	font-family: var(--font-merriweather), serif !important;
 }
 
-[data-font="nunito"] * {
-	font-family: var(--font-nunito), system-ui, sans-serif;
+[data-font="nunito"] {
+	font-family: var(--font-nunito), system-ui, sans-serif !important;
 }
 
-[data-font="ubuntu"] * {
-	font-family: var(--font-ubuntu), system-ui, sans-serif;
+[data-font="ubuntu"] {
+	font-family: var(--font-ubuntu), system-ui, sans-serif !important;
 }
 
-[data-font="playfairDisplay"] * {
-	font-family: var(--font-playfairDisplay), serif;
+[data-font="playfairDisplay"] {
+	font-family: var(--font-playfairDisplay), serif !important;
 }
 
-[data-font="workSans"] * {
-	font-family: var(--font-workSans), system-ui, sans-serif;
+[data-font="workSans"] {
+	font-family: var(--font-workSans), system-ui, sans-serif !important;
 }
 
-[data-font="monoton"] * {
-	font-family: var(--font-monoton), cursive, sans-serif;
+[data-font="monoton"] {
+	font-family: var(--font-monoton), cursive, sans-serif !important;
 }
