feat: add Keyboard component size props, change width of keys correctly. Practice page, add typing mechanics, text rendering

--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -91,3 +91,11 @@ body {
 		color: var(--untyped);
 	}
 }
+
+.scrollbar-hide {
+  	-ms-overflow-style: none;
+  	scrollbar-width: none;
+}
+.scrollbar-hide::-webkit-scrollbar {
+  	display: none;
+}
